--- a/SunShine.Web/Views/Manage/SiteCategoryList.cshtml
+++ b/SunShine.Web/Views/Manage/SiteCategoryList.cshtml
@@ -16,18 +16,31 @@
     </ol>
 </div>
 <div class="ManageRightContent">
+    
     @*<div>
         <a class="btn btn-primary" href="@Url.Action("SiteCategoryEdit","Manage")">新增</a>
     </div>*@
     <div>
         @Html.Raw(Url.BootstrapPagerHTML(pageCount, pageIndex, "SiteCategoryList", "Manage", ViewContext.RouteData.Values))
     </div>
+    @*<div>
+        <form action="@Url.Action("ArticleList","Manage")" method="get">
+            <div class="row searchbox">
+                <div class="col-xs-2">
+                    <a class="btn btn-danger" href="javascript:void(0);" id="btn_del_selected">删除选中项</a>
+                </div>
+            </div>
+        </form>
+    </div>*@
     <div class="list-box">
         @if (Model.Count > 0)
         {
             <table class="table table-bordered table-hover table-striped">
                 <thead>
                     <tr>
+                        @*<th>
+                            <input type="checkbox" id="chk_all" />
+                        </th>*@
                         <th>@(AttributeHelper.DisplayAttributeFor<SiteCategoryViewModel, SiteCategory>(en => en.ParentCategory))</th>
                         <th>@(AttributeHelper.DisplayAttributeFor<SiteCategoryViewModel, String>(en => en.categoryname))</th>
                         <th>@(AttributeHelper.DisplayAttributeFor<SiteCategoryViewModel, String>(en => en.englishname))</th>
@@ -42,6 +55,9 @@
                     @foreach (var item in Model)
                     {
                         <tr>
+                            @*<td>
+                                <input type="checkbox" name="chk_list_item" value="@item.idcategory" />
+                            </td>*@
                             <td>@(item.ParentCategory != null ? item.ParentCategory.categoryname : "")</td>
                             <td>@item.categoryname</td>
                             <td>@item.englishname</td>
@@ -56,6 +72,7 @@
                             <td>
                                 <a href="@Url.Action("SiteCategoryEdit","Manage",new {idcategory=item.idcategory,returnurl= Request.RawUrl })" class="btn btn-primary">编辑</a>
                                 <a href="@Url.Action("ArticleEdit","Manage",new {idcategory=item.idcategory,returnurl= Request.RawUrl })" class="btn btn-primary">新增文章</a>
+                                @*<a href="javascript:void(0);" class="btn btn-danger" name="btn_del" value="@item.idcategory">删除</a>*@
                             </td>
                         </tr>
                     }
@@ -74,5 +91,23 @@
         $.fn.bootstrapSwitch.defaults.onText = '启用';
         $.fn.bootstrapSwitch.defaults.offText = '禁用';
         $("[name='enableSiteCategory']").bootstrapSwitch();
+        checkbox_select_all('chk_all', 'chk_list_item');
+        var delUrl = "@Url.Action("SiteCategoryDelete", "Manage")";
+        $("#btn_del_selected").click(function () {
+            checkbox_selected_del("chk_list_item", function (data) {
+                var postData = { idcategories: data };
+                ajax_del(delUrl, postData);
+            });
+        });
+        $("[name='btn_del']").click(function () {
+            if (!confirm("确认要删除该记录吗？")) {
+                return;
+            }
+            var data = new Array();
+            data.push($(this).attr("value"));
+            var postData = { idcategories: data };
+            ajax_del(delUrl, postData);
+        });
     });
+
 </script>
