--- a/SunShine.Web/Views/Parts/BottomProductCategory.cshtml
+++ b/SunShine.Web/Views/Parts/BottomProductCategory.cshtml
@@ -14,7 +14,7 @@
 @{
     if (Model != null && Model.Count > 0) {
 
-        <div class="category_box">
+        <div class="category_box" style="padding:20px 0;">
             <div class="category_header">
                 <img src="~/Images/home/car_icon.jpg" />产品直通车
             </div>
