--- a/SunShine.Web/Views/Parts/NavQuestions.cshtml
+++ b/SunShine.Web/Views/Parts/NavQuestions.cshtml
@@ -6,8 +6,8 @@
 }
 <div class="wt">
     <div class="news_tt">
-        <div class="news_t2"><a href="@Url.Action("Index","Case",new {categoryCode="sunshinebrand",currentCategoryCode="commonquestion" })">常见问题</a></div>
-        <div class="more"><a href="@Url.Action("Index","Case",new {categoryCode="sunshinebrand",currentCategoryCode="commonquestion" })"><img src="~/Images/home/more_2.jpg"></a></div>
+        <div class="news_t2"><a href="@Url.Action("Index","Case",new {categoryCode="news",currentCategoryCode="commonquestion" })">常见问题</a></div>
+        <div class="more"><a href="@Url.Action("Index","Case",new {categoryCode="news",currentCategoryCode="commonquestion" })"><img src="~/Images/home/more_2.jpg"></a></div>
     </div>
     <div style="clear:both"></div>
     @if (Model.Count > 0)
