--- a/SunShine.Web/Views/Shared/_Layout.cshtml
+++ b/SunShine.Web/Views/Shared/_Layout.cshtml
@@ -80,10 +80,10 @@
         <div class="tablist">
             <ul>
                 <li><a href="@Url.Action("Index", "Home")">创意阳光首页</a></li>
-                <li><a href="@Url.Action("List", "Product", new { categoryCode = "marketing_design" })">营销型画册设计</a></li>
-                <li><a href="@Url.Action("List", "Product", new { categoryCode = "brochure_design" })">宣传画册设计</a></li>
-                <li><a href="@Url.Action("List", "Product", new { categoryCode = "product_desgin" })">产品画册设计</a></li>
-                <li><a href="@Url.Action("List", "Product", new { categoryCode = "company_employ_desgin" })">员工手册设计</a></li>
+                <li><a href="@Url.Action("List", "Product", new { categoryCode = "company_public_design" })">宣传画册设计</a></li>
+                <li><a href="@Url.Action("List", "Product", new { categoryCode = "enterprice_face_desgin" })">形象画册设计</a></li>
+                <li><a href="@Url.Action("List", "Product", new { categoryCode = "enterprice_design" })">产品画册设计</a></li>
+                <li><a href="@Url.Action("List", "Product", new { categoryCode = "company_employ_design" })">员工手册设计</a></li>
                 <li><a href="@Url.Action("Index", "Case", new { categoryCode = "successcase" })">成功案例</a></li>
                 <li><a href="@Url.Action("Index", "Case", new { categoryCode = "news" })">新闻资讯</a></li>
                 <li><a href="@Url.Action("Index", "Case", new { categoryCode = "contactsunshine" })">联系创意阳光</a></li>
