--- a/SunShine.Web/Views/Parts/NavNews.cshtml
+++ b/SunShine.Web/Views/Parts/NavNews.cshtml
@@ -9,9 +9,9 @@
     <div class="news_t">
         <ul>
             <!--  <li class="xuanz"><a href="JavaScript:;">媒体报道</a></li> -->
-            <li class="no1"><a href="@Url.Action("Index","Case",new {categoryCode="sunshinebrand",currentCategoryCode="mediareport" })">媒体报道</a></li>
+            <li class="no1"><a href="@Url.Action("Index","Case",new {categoryCode="news",currentCategoryCode="mediareport" })">媒体报道</a></li>
         </ul>
-        <div class="more"><a href="@Url.Action("Index","Case",new {categoryCode="sunshinebrand",currentCategoryCode="mediareport" })" id="news_links"><img src="~/Images/home/more_2.jpg"></a></div>
+        <div class="more"><a href="@Url.Action("Index","Case",new {categoryCode="news",currentCategoryCode="mediareport" })" id="news_links"><img src="~/Images/home/more_2.jpg"></a></div>
     </div>
     @if (Model.Count > 0) {
         <div class="content4">
