--- a/SunShine.Web/jsor-jcarousel/extra/jcarousel.responsive.css
+++ b/SunShine.Web/jsor-jcarousel/extra/jcarousel.responsive.css
@@ -5,7 +5,8 @@
     float: left;
     background-color: #E15517;
     border-bottom: 6px solid #383431;
-    height: 190px;
+    /*padding-bottom:12px;*/
+    /*height: 190px;*/
 }
 
 /** Carousel **/
@@ -16,7 +17,7 @@
     width: 1000px;
     float: left;
     margin-left: 60px;
-    margin-top: 17px;
+    margin-top: 25px;
     /* margin-bottom: 15px; */
 }
 
@@ -31,7 +32,7 @@
     .jcarousel li {
         width: 200px;
         float: left;
-        border: 1px solid #fff;
+        /*border: 1px solid #fff;*/
         -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
