--- a/SunShine.Web/Views/Shared/_ProductItemPartial1.cshtml
+++ b/SunShine.Web/Views/Shared/_ProductItemPartial1.cshtml
@@ -15,9 +15,9 @@
                 }
                 @foreach (var item in Model)
                 {
-                    <li  @Html.Raw((i+1)%2==1?"style='clear:both;'":"")>
+                    <li>
                         <div class="cp_img">
-                            <a href="@Url.Action("List","Product",new { idproduct=item.idproduct})" title="@item.name"><img src="@Url.Content(item.img)" onload="DrawImage(this,332,230)" alt="@item.name" /></a>
+                            <a href="@Url.Action("List","Product",new { idproduct=item.idproduct})" title="@item.name"><img src="@Url.Content(item.img)" style="width:346px;height:230px;" alt="@item.name" /></a>
                             <div class="cp_bottom">
                                 <div class="cp_name"><a href="@Url.Action("List","Product",new { idproduct=item.idproduct})">@item.name</a></div>
                                 @if (!BrowerDetectorHelper.IsMobile())
