--- a/SunShine.Web/Views/Parts/Mobile_BottomProductCategory.cshtml
+++ b/SunShine.Web/Views/Parts/Mobile_BottomProductCategory.cshtml
@@ -21,7 +21,7 @@
     if (Model != null && Model.Count > 0)
     {
         <div class="category_box">
-            <div class="category_header">
+            @*<div class="category_header">
                 <span class="left">产品中心</span>
                 <span class="right">
                     @if (siteModel!=null) {
@@ -29,7 +29,7 @@
                     }
                 </span>
                 <div style="clear:both;"></div>
-            </div>
+            </div>*@
             <div style="clear:both;"></div>
             @if (usageCategories != null && usageCategories.Count > 0)
             {
