--- a/SunShine.Web/Views/Parts/Mobile_BottomWebsiteInfo.cshtml
+++ b/SunShine.Web/Views/Parts/Mobile_BottomWebsiteInfo.cshtml
@@ -8,9 +8,10 @@
 @if (Model != null)
 {
     <div class="site_bottom">
-        <div class="site_info_item">@Model.sitename</div>
+        <div class="site_info_item">@Model.copyright</div>
+        <div class="site_info_item">@Model.support</div>
         <div class="site_info_item">地址：@Model.address</div>
-        <div class="site_info_item">免费热线：@Model.hotphoneallcountry &nbsp;&nbsp; @Model.hotphone</div>
+        <div class="site_info_item">免费热线：@Model.hotphoneallcountry &nbsp;&nbsp; @Model.hotphone&nbsp;&nbsp;027-85358278</div>
         <div class="site_info_item">客服QQ：@Model.qq &nbsp;&nbsp;&nbsp;@Model.qq2</div>
         <div class="site_info_item">@Model.copyright</div>
     </div>
