--- a/SunShine.Web/Views/Home/Index.cshtml
+++ b/SunShine.Web/Views/Home/Index.cshtml
@@ -84,30 +84,28 @@
 </div>
 
 <br />
-@if (BrowerDetectorHelper.IsMobile())
-{
-    <div class="mobile_content_box">
-        <img class="make_step_img" src="~/Images/home/make_step.jpg" />
-    </div>
-}
-else
-{
-}
-
 @{
     Html.RenderAction("BigQuestions", "Parts");
-    Html.RenderAction("SetPosition", "Parts");
-    Html.RenderAction("DesignCompare", "Parts");
+    if (BrowerDetectorHelper.IsMobile())
+    {
+        Html.RenderAction("Mobile_CoreAdvance", "Parts");
+    }
+    if (!BrowerDetectorHelper.IsMobile())
+    {
+        Html.RenderAction("SetPosition", "Parts");
+        Html.RenderAction("DesignCompare", "Parts");
+    }
 }
 
 @{
     Html.RenderAction("CaseListItemsScroll", "Parts");
     Html.RenderAction("DesignService", "Parts");
-    Html.RenderAction("CoreAdvance", "Parts");
     if (!BrowerDetectorHelper.IsMobile())
     {
-        Html.RenderPartial("_HistoryBannerPartial", null);
+        Html.RenderAction("CoreAdvance", "Parts");
     }
+    Html.RenderPartial("_HistoryBannerPartial", null);
+
     if (!BrowerDetectorHelper.IsMobile())
     {
         Html.RenderAction("Partner", "Parts");
@@ -117,10 +115,10 @@ else
         Html.RenderAction("Mobile_Partner", "Parts");
     }
     Html.RenderPartial("_CustomizeFlowPartial", null);
-    if (BrowerDetectorHelper.IsMobile())
-    {
-        Html.RenderAction("Mobile_Bottom_Honor", "Parts");
-    }
+    //if (BrowerDetectorHelper.IsMobile())
+    //{
+    //    Html.RenderAction("Mobile_Bottom_Honor", "Parts");
+    //}
 
     Html.RenderPartial("_BookTitle", null);
 }
