--- a/SunShine.Web/Views/Shared/_CustomizeFlowPartial.cshtml
+++ b/SunShine.Web/Views/Shared/_CustomizeFlowPartial.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 
-<div class="img_middle_width">
+<div class="img_middle_width service_flow_box">
         @if (BrowerDetectorHelper.IsMobile()) {
             <img class="img" src="/Images/home/service_flow.jpg" />
         }
