--- a/SunShine.Web/Views/Shared/_HistoryBannerPartial.cshtml
+++ b/SunShine.Web/Views/Shared/_HistoryBannerPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = null;
 }
-<div class="img_more_width">
+<div class="img_more_width show_case_box">
     <img class="img" src="/Images/home/show_case_title.jpg">
 </div>
