--- a/SunShine.Web/Views/Shared/_Mobile_Layout.cshtml
+++ b/SunShine.Web/Views/Shared/_Mobile_Layout.cshtml
@@ -62,12 +62,14 @@
         <div class="logo">
             <a href="@Url.Action("Index", "Home")">  <img src="~/Images/home/fgz_05.jpg" />    </a>
         </div>
-        <div class="telephonenumber_icon">
-            <img src="~/Images/home/fgz_06.jpg" />
-        </div>
-        <div class="telephonenumber">
-            <div class="telephonenumber_item">4008-778-652</div>
-            <div class="telephonenumber_item">156 7156 6365</div>
+        <div class="site_logo_right">
+            <div class="telephonenumber_icon">
+                <img src="~/Images/home/fgz_06.jpg" />
+            </div>
+            <div class="telephonenumber">
+                <div class="telephonenumber_item">4008-778-652</div>
+                <div class="telephonenumber_item">156 7156 6365</div>
+            </div>
         </div>
         <div style="clear:both"></div>
     </div>
